--- a/recipes.html
+++ b/recipes.html
@@ -170,7 +170,11 @@
                 Cook: 0 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="mediterranean-chickpea-salad.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -217,7 +221,11 @@
                 Cook: 5 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="avocado-tomato-wholegrain-toast.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -266,7 +274,11 @@
                 Cook: 12 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="one-pan-lemon-garlic-salmon-with-asparagus.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -313,7 +325,11 @@
                 Cook: 15 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="_quinoa-veggie-power-bowl.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -360,7 +376,11 @@
                 Cook: 15 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="sweet-potato-black-bean-tacos.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -407,7 +427,11 @@
                 Cook: 0 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="greek-yogurt-berry-parfait.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -453,7 +477,11 @@
                 Cook: 20 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="lentil-spinach-soup.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
 
           <div class="meals__card">
@@ -499,7 +527,11 @@
                 Cook: 10 min
               </div>
             </div>
-            <a href="#" class="meals__btn btn btn--recipe">View Recipe</a>
+            <a
+              href="banana-oat-pancakes.html"
+              class="meals__btn btn btn--recipe"
+              >View Recipe</a
+            >
           </div>
         </section>
       </section>
