--- a/quinoa-veggie-power-bowl.html
+++ b/quinoa-veggie-power-bowl.html
@@ -49,30 +49,28 @@
           <div class="recipe__breadcrumbs breadcrumbs">
             <a href="../recipes.html" class="breadcrumbs__link">Recipes</a>
             <p class="breadcrumbs__recipe-name">
-              <span>/</span> One-Pan Lemon Garlic Salmon with Asparagus
+              <span>/</span> Quinoa Veggie Power Bowl
             </p>
           </div>
           <div class="recipe__box">
             <div class="recipe__imgs">
               <img
                 class="hide__mobile"
-                src="assets/images/salmon-asparagus-large.webp"
-                alt="One-Pan Lemon Garlic Salmon with Asparagus"
+                src="assets/images/quinoa-veggie-bowl-large.webp"
+                alt="Quinoa Veggie Power Bowl"
               />
               <img
                 class="hide__desktop"
-                src="assets/images/salmon-asparagus-small.webp"
-                alt="One-Pan Lemon Garlic Salmon with Asparagus"
+                src="assets/images/quinoa-veggie-bowl-small.webp"
+                alt="Quinoa Veggie Power Bowl"
               />
             </div>
             <div class="recipe__description description">
-              <h1 class="description__heading">
-                One-Pan Lemon Garlic Salmon with Asparagus
-              </h1>
+              <h1 class="description__heading">Quinoa Veggie Power Bowl</h1>
 
               <p class="description__text">
-                A 15-minute weeknight dinner of flaky salmon and tender
-                asparagus.
+                A balanced bowl of fluffy quinoa, roasted veggies and healthy
+                fats.
               </p>
 
               <div class="description__details details">
@@ -89,7 +87,7 @@
                     src="assets/images/icon-prep-time.svg"
                     alt="Icon prep time"
                   />
-                  Prep: 5 mins
+                  Prep: 10 mins
                 </div>
 
                 <div class="details__element">
@@ -97,7 +95,7 @@
                     src="assets/images/icon-cook-time.svg"
                     alt="Icon cook time"
                   />
-                  Cook: 12 min
+                  Cook: 15 min
                 </div>
               </div>
 
@@ -109,7 +107,7 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    2 salmon fillets (125 g each)
+                    1 cup cooked quinoa (from 1/3 cup dry)
                   </li>
 
                   <li class="ingridients__item">
@@ -117,7 +115,39 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    200 g asparagus spears, trimmed
+                    1 cup roasted sweet potato cubes
+                  </li>
+
+                  <li class="ingridients__item">
+                    <img
+                      src="assets/images/icon-bullet-point.svg"
+                      alt="icon bullet point"
+                    />
+                    1 cup baby spinach
+                  </li>
+
+                  <li class="ingridients__item">
+                    <img
+                      src="assets/images/icon-bullet-point.svg"
+                      alt="icon bullet point"
+                    />
+                    1/2 cup chickpeas, drained & rinsed
+                  </li>
+
+                  <li class="ingridients__item">
+                    <img
+                      src="assets/images/icon-bullet-point.svg"
+                      alt="icon bullet point"
+                    />
+                    1/2 avocado, sliced
+                  </li>
+
+                  <li class="ingridients__item">
+                    <img
+                      src="assets/images/icon-bullet-point.svg"
+                      alt="icon bullet point"
+                    />
+                    1 Tbsp pumpkin seeds
                   </li>
 
                   <li class="ingridients__item">
@@ -127,13 +157,12 @@
                     />
                     1 Tbsp extra-virgin olive oil
                   </li>
-
                   <li class="ingridients__item">
                     <img
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    2 garlic cloves, minced
+                    1 Tbsp fresh lemon juice
                   </li>
 
                   <li class="ingridients__item">
@@ -141,15 +170,7 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    1/2 lemon, sliced
-                  </li>
-
-                  <li class="ingridients__item">
-                    <img
-                      src="assets/images/icon-bullet-point.svg"
-                      alt="icon bullet point"
-                    />
-                    Sea salt & black pepper
+                    Sea salt & black pepper to taste
                   </li>
                 </ul>
               </section>
@@ -162,7 +183,7 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    Heat a large skillet over medium-high with olive oil
+                    Cook quinoa according to package, fluff and cool slightly.
                   </li>
 
                   <li class="instructions__item">
@@ -170,8 +191,7 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    Season salmon and asparagus with salt, pepper, and minced
-                    garlic.
+                    In bowls layer spinach, quinoa, sweet potato and chickpeas.
                   </li>
 
                   <li class="instructions__item">
@@ -179,7 +199,7 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    Place salmon skin-side down; arrange asparagus around.
+                    Top with avocado slices and pumpkin seeds.
                   </li>
 
                   <li class="instructions__item">
@@ -187,8 +207,8 @@
                       src="assets/images/icon-bullet-point.svg"
                       alt="icon bullet point"
                     />
-                    Cook 4 min, flip salmon, add lemon slices, cook 4-5 min more
-                    until salmon is opaque.", "Serve hot with pan juices.
+                    Whisk olive oil, lemon juice, salt & pepper; drizzle over
+                    bowls.
                   </li>
                 </ul>
               </section>
@@ -200,108 +220,6 @@
         <div class="more__inner">
           <h2 class="more__heading">More recipes</h2>
           <section class="meals">
-            <div class="meals__card">
-              <div class="meals__img">
-                <img
-                  class="hide__mobile"
-                  src="assets/images/quinoa-veggie-bowl-large.webp"
-                  alt="Quinoa veggie bowl"
-                />
-                <img
-                  class="hide__desktop"
-                  src="assets/images/quinoa-veggie-bowl-small.webp"
-                  alt="Quinoa veggie bowl"
-                />
-              </div>
-              <div class="meals__info info">
-                <h2 class="info__heading">Quinoa Veggie Power Bowl</h2>
-                <p class="info__text">
-                  A balanced bowl of fluffy quinoa, roasted veggies and healthy
-                  fats.
-                </p>
-              </div>
-              <div class="meals__details details">
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-servings.svg"
-                    alt="Icon servings"
-                  />
-                  Servings: 2
-                </div>
-
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-prep-time.svg"
-                    alt="Icon prep time"
-                  />
-                  Prep: 10 mins
-                </div>
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-cook-time.svg"
-                    alt="Icon cook time"
-                  />
-                  Cook: 15 min
-                </div>
-              </div>
-              <a
-                href="quinoa-veggie-power-bowl.html"
-                class="meals__btn btn btn--recipe"
-                >View Recipe</a
-              >
-            </div>
-
-            <div class="meals__card">
-              <div class="meals__img">
-                <img
-                  class="hide__mobile"
-                  src="assets/images/sweet-potato-tacos-large.webp"
-                  alt="Sweet potato tacos"
-                />
-                <img
-                  class="hide__desktop"
-                  src="assets/images/sweet-potato-tacos-small.webp"
-                  alt="Sweet potato tacos"
-                />
-              </div>
-              <div class="meals__info info">
-                <h2 class="info__heading">Sweet Potato Black Bean Tacos</h2>
-                <p class="info__text">
-                  Smoky roasted sweet potatoes and black beans tucked into warm
-                  tortillas.
-                </p>
-              </div>
-              <div class="meals__details details">
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-servings.svg"
-                    alt="Icon servings"
-                  />
-                  Servings: 3
-                </div>
-
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-prep-time.svg"
-                    alt="Icon prep time"
-                  />
-                  Prep: 10 mins
-                </div>
-                <div class="details__element">
-                  <img
-                    src="assets/images/icon-cook-time.svg"
-                    alt="Icon cook time"
-                  />
-                  Cook: 15 min
-                </div>
-              </div>
-              <a
-                href="sweet-potato-black-bean-tacos.html"
-                class="meals__btn btn btn--recipe"
-                >View Recipe</a
-              >
-            </div>
-
             <div class="meals__card">
               <div class="meals__img">
                 <img
@@ -348,6 +266,106 @@
               </div>
               <a
                 href="greek-yogurt-berry-parfait.html"
+                class="meals__btn btn btn--recipe"
+                >View Recipe</a
+              >
+            </div>
+
+            <div class="meals__card">
+              <div class="meals__img">
+                <img
+                  class="hide__mobile"
+                  src="assets/images/lentil-soup-large.webp"
+                  alt="Greek yogurt"
+                />
+                <img
+                  class="hide__desktop"
+                  src="assets/images/lentil-soup-small.webp"
+                  alt="Greek yogurt"
+                />
+              </div>
+              <div class="meals__info info">
+                <h2 class="info__heading">Lentil & Spinach Soup</h2>
+                <p class="info__text">
+                  A hearty 30-minute soup rich in plant protein and iron.
+                </p>
+              </div>
+              <div class="meals__details details">
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-servings.svg"
+                    alt="Icon servings"
+                  />
+                  Servings: 4
+                </div>
+
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-prep-time.svg"
+                    alt="Icon prep time"
+                  />
+                  Prep: 10 mins
+                </div>
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-cook-time.svg"
+                    alt="Icon cook time"
+                  />
+                  Cook: 20 min
+                </div>
+              </div>
+              <a
+                href="lentil-spinach-soup.html"
+                class="meals__btn btn btn--recipe"
+                >View Recipe</a
+              >
+            </div>
+
+            <div class="meals__card">
+              <div class="meals__img">
+                <img
+                  class="hide__mobile"
+                  src="assets/images/banana-pancakes-large.webp"
+                  alt="Banana pancakes"
+                />
+                <img
+                  class="hide__desktop"
+                  src="assets/images/banana-pancakes-small.webp"
+                  alt="Banana pancakes"
+                />
+              </div>
+              <div class="meals__info info">
+                <h2 class="info__heading">Banana Oat Pancakes</h2>
+                <p class="info__text">
+                  Flour-free pancakes sweetened naturally with ripe bananas.
+                </p>
+              </div>
+              <div class="meals__details details">
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-servings.svg"
+                    alt="Icon servings"
+                  />
+                  Servings: 2
+                </div>
+
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-prep-time.svg"
+                    alt="Icon prep time"
+                  />
+                  Prep: 5 mins
+                </div>
+                <div class="details__element">
+                  <img
+                    src="assets/images/icon-cook-time.svg"
+                    alt="Icon cook time"
+                  />
+                  Cook: 10 min
+                </div>
+              </div>
+              <a
+                href="banana-oat-pancakes.html"
                 class="meals__btn btn btn--recipe"
                 >View Recipe</a
               >
