--- a/quinoa-veggie-power-bowl.html
+++ b/quinoa-veggie-power-bowl.html
@@ -47,7 +47,7 @@
       <section class="recipe container">
         <div class="recipe__inner">
           <div class="recipe__breadcrumbs breadcrumbs">
-            <a href="../recipes.html" class="breadcrumbs__link">Recipes</a>
+            <a href="recipes.html" class="breadcrumbs__link">Recipes</a>
             <p class="breadcrumbs__recipe-name">
               <span>/</span> Quinoa Veggie Power Bowl
             </p>
